gen/grammarGPParser.py
# Generated from grammarGP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarGPParser ( Parser ):

    grammarFileName = "grammarGP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "';'", "<INVALID>", 
                     "<INVALID>", "'if'", "'else'", "'while'", "'read'", 
                     "'write'", "'break'", "'continue'", "'&&'", "'||'", 
                     "'int'", "'float'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'!'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "PLUS", "MINUS", "TIMES", "DIV", "ASSIGN", 
                      "SEMI", "INTEGER_LITERAL", "FLOAT_LITERAL", "IF", 
                      "ELSE", "WHILE", "READ", "WRITE", "BREAK", "CONTINUE", 
                      "AND", "OR", "INT", "FLOAT", "EQ", "NE", "LT", "GT", 
                      "LE", "GE", "NOT", "IDENTIFIER", "WS", "DIGIT", "LETTER" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_assignmentStatement = 3
    RULE_ifStatement = 4
    RULE_loopStatement = 5
    RULE_loopStatementContent = 6
    RULE_breakStatement = 7
    RULE_continueStatement = 8
    RULE_read = 9
    RULE_write = 10
    RULE_primaryExpression = 11
    RULE_unaryExpression = 12
    RULE_multiplicativeExpression = 13
    RULE_additiveExpression = 14
    RULE_relationalExpression = 15
    RULE_equalityExpression = 16
    RULE_logicalAndExpression = 17
    RULE_logicalOrExpression = 18
    RULE_expression = 19
    RULE_castExpression = 20
    RULE_relation = 21
    RULE_equalityRelation = 22
    RULE_unaryOperator = 23
    RULE_literal = 24
    RULE_identifier = 25
    RULE_typeSpecifier = 26

    ruleNames =  [ "program", "statement", "block", "assignmentStatement", 
                   "ifStatement", "loopStatement", "loopStatementContent", 
                   "breakStatement", "continueStatement", "read", "write", 
                   "primaryExpression", "unaryExpression", "multiplicativeExpression", 
                   "additiveExpression", "relationalExpression", "equalityExpression", 
                   "logicalAndExpression", "logicalOrExpression", "expression", 
                   "castExpression", "relation", "equalityRelation", "unaryOperator", 
                   "literal", "identifier", "typeSpecifier" ]

    EOF = Token.EOF
    COMMA=1
    DOT=2
    LPAREN=3
    RPAREN=4
    LBRACE=5
    RBRACE=6
    PLUS=7
    MINUS=8
    TIMES=9
    DIV=10
    ASSIGN=11
    SEMI=12
    INTEGER_LITERAL=13
    FLOAT_LITERAL=14
    IF=15
    ELSE=16
    WHILE=17
    READ=18
    WRITE=19
    BREAK=20
    CONTINUE=21
    AND=22
    OR=23
    INT=24
    FLOAT=25
    EQ=26
    NE=27
    LT=28
    GT=29
    LE=30
    GE=31
    NOT=32
    IDENTIFIER=33
    WS=34
    DIGIT=35
    LETTER=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(grammarGPParser.EOF, 0)

        def assignmentStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGPParser.AssignmentStatementContext)
            else:
                return self.getTypedRuleContext(grammarGPParser.AssignmentStatementContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGPParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarGPParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarGPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = grammarGPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 54
                    self.assignmentStatement()

                else:
                    raise NoViableAltException(self)
                self.state = 57 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8641216512) != 0):
                self.state = 59
                self.statement()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(grammarGPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(grammarGPParser.AssignmentStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(grammarGPParser.LoopStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(grammarGPParser.IfStatementContext,0)


        def read(self):
            return self.getTypedRuleContext(grammarGPParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(grammarGPParser.WriteContext,0)


        def getRuleIndex(self):
            return grammarGPParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = grammarGPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24, 25, 33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.assignmentStatement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.loopStatement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.ifStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.read()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.write()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(grammarGPParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(grammarGPParser.RBRACE, 0)

        def loopStatementContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGPParser.LoopStatementContentContext)
            else:
                return self.getTypedRuleContext(grammarGPParser.LoopStatementContentContext,i)


        def getRuleIndex(self):
            return grammarGPParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = grammarGPParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(grammarGPParser.LBRACE)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8644231168) != 0):
                self.state = 75
                self.loopStatementContent()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(grammarGPParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(grammarGPParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(grammarGPParser.SEMI, 0)

        def typeSpecifier(self):
            return self.getTypedRuleContext(grammarGPParser.TypeSpecifierContext,0)


        def ASSIGN(self):
            return self.getToken(grammarGPParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarGPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return grammarGPParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = grammarGPParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignmentStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24 or _la==25:
                self.state = 83
                self.typeSpecifier()


            self.state = 86
            self.identifier()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 87
                self.match(grammarGPParser.ASSIGN)
                self.state = 88
                self.expression()


            self.state = 91
            self.match(grammarGPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(grammarGPParser.IF, 0)

        def LPAREN(self):
            return self.getToken(grammarGPParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarGPParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(grammarGPParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(grammarGPParser.BlockContext,0)


        def ELSE(self):
            return self.getToken(grammarGPParser.ELSE, 0)

        def LBRACE(self):
            return self.getToken(grammarGPParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(grammarGPParser.RBRACE, 0)

        def loopStatementContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGPParser.LoopStatementContentContext)
            else:
                return self.getTypedRuleContext(grammarGPParser.LoopStatementContentContext,i)


        def getRuleIndex(self):
            return grammarGPParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = grammarGPParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(grammarGPParser.IF)
            self.state = 94
            self.match(grammarGPParser.LPAREN)
            self.state = 95
            self.expression()
            self.state = 96
            self.match(grammarGPParser.RPAREN)
            self.state = 97
            self.block()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 98
                self.match(grammarGPParser.ELSE)
                self.state = 99
                self.match(grammarGPParser.LBRACE)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8644231168) != 0):
                    self.state = 100
                    self.loopStatementContent()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 106
                self.match(grammarGPParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(grammarGPParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(grammarGPParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarGPParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(grammarGPParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(grammarGPParser.BlockContext,0)


        def getRuleIndex(self):
            return grammarGPParser.RULE_loopStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatement" ):
                listener.enterLoopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatement" ):
                listener.exitLoopStatement(self)




    def loopStatement(self):

        localctx = grammarGPParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_loopStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(grammarGPParser.WHILE)
            self.state = 110
            self.match(grammarGPParser.LPAREN)
            self.state = 111
            self.expression()
            self.state = 112
            self.match(grammarGPParser.RPAREN)
            self.state = 113
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(grammarGPParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(grammarGPParser.IfStatementContext,0)


        def read(self):
            return self.getTypedRuleContext(grammarGPParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(grammarGPParser.WriteContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(grammarGPParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(grammarGPParser.ContinueStatementContext,0)


        def getRuleIndex(self):
            return grammarGPParser.RULE_loopStatementContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatementContent" ):
                listener.enterLoopStatementContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatementContent" ):
                listener.exitLoopStatementContent(self)




    def loopStatementContent(self):

        localctx = grammarGPParser.LoopStatementContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loopStatementContent)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24, 25, 33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.assignmentStatement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.ifStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.read()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.write()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.breakStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.continueStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(grammarGPParser.BREAK, 0)

        def SEMI(self):
            return self.getToken(grammarGPParser.SEMI, 0)

        def getRuleIndex(self):
            return grammarGPParser.RULE_breakStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)




    def breakStatement(self):

        localctx = grammarGPParser.BreakStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_breakStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(grammarGPParser.BREAK)
            self.state = 124
            self.match(grammarGPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinueStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(grammarGPParser.CONTINUE, 0)

        def SEMI(self):
            return self.getToken(grammarGPParser.SEMI, 0)

        def getRuleIndex(self):
            return grammarGPParser.RULE_continueStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStatement" ):
                listener.enterContinueStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStatement" ):
                listener.exitContinueStatement(self)




    def continueStatement(self):

        localctx = grammarGPParser.ContinueStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_continueStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(grammarGPParser.CONTINUE)
            self.state = 127
            self.match(grammarGPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(grammarGPParser.READ, 0)

        def LPAREN(self):
            return self.getToken(grammarGPParser.LPAREN, 0)

        def identifier(self):
            return self.getTypedRuleContext(grammarGPParser.IdentifierContext,0)


        def RPAREN(self):
            return self.getToken(grammarGPParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(grammarGPParser.SEMI, 0)

        def getRuleIndex(self):
            return grammarGPParser.RULE_read

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)




    def read(self):

        localctx = grammarGPParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(grammarGPParser.READ)
            self.state = 130
            self.match(grammarGPParser.LPAREN)
            self.state = 131
            self.identifier()
            self.state = 132
            self.match(grammarGPParser.RPAREN)
            self.state = 133
            self.match(grammarGPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(grammarGPParser.WRITE, 0)

        def LPAREN(self):
            return self.getToken(grammarGPParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarGPParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(grammarGPParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(grammarGPParser.SEMI, 0)

        def getRuleIndex(self):
            return grammarGPParser.RULE_write

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)




    def write(self):

        localctx = grammarGPParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(grammarGPParser.WRITE)
            self.state = 136
            self.match(grammarGPParser.LPAREN)
            self.state = 137
            self.expression()
            self.state = 138
            self.match(grammarGPParser.RPAREN)
            self.state = 139
            self.match(grammarGPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(grammarGPParser.LiteralContext,0)


        def identifier(self):
            return self.getTypedRuleContext(grammarGPParser.IdentifierContext,0)


        def castExpression(self):
            return self.getTypedRuleContext(grammarGPParser.CastExpressionContext,0)


        def LPAREN(self):
            return self.getToken(grammarGPParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarGPParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(grammarGPParser.RPAREN, 0)

        def getRuleIndex(self):
            return grammarGPParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)




    def primaryExpression(self):

        localctx = grammarGPParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_primaryExpression)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.literal()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.identifier()
                pass
            elif token in [24, 25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.castExpression()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.match(grammarGPParser.LPAREN)
                self.state = 145
                self.expression()
                self.state = 146
                self.match(grammarGPParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryOperator(self):
            return self.getTypedRuleContext(grammarGPParser.UnaryOperatorContext,0)


        def primaryExpression(self):
            return self.getTypedRuleContext(grammarGPParser.PrimaryExpressionContext,0)


        def getRuleIndex(self):
            return grammarGPParser.RULE_unaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpression" ):
                listener.enterUnaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpression" ):
                listener.exitUnaryExpression(self)




    def unaryExpression(self):

        localctx = grammarGPParser.UnaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_unaryExpression)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.unaryOperator()
                self.state = 151
                self.primaryExpression()
                pass
            elif token in [3, 13, 14, 24, 25, 33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.primaryExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGPParser.UnaryExpressionContext)
            else:
                return self.getTypedRuleContext(grammarGPParser.UnaryExpressionContext,i)


        def TIMES(self, i:int=None):
            if i is None:
                return self.getTokens(grammarGPParser.TIMES)
            else:
                return self.getToken(grammarGPParser.TIMES, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(grammarGPParser.DIV)
            else:
                return self.getToken(grammarGPParser.DIV, i)

        def getRuleIndex(self):
            return grammarGPParser.RULE_multiplicativeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeExpression" ):
                listener.enterMultiplicativeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeExpression" ):
                listener.exitMultiplicativeExpression(self)




    def multiplicativeExpression(self):

        localctx = grammarGPParser.MultiplicativeExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_multiplicativeExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.unaryExpression()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==10:
                self.state = 157
                _la = self._input.LA(1)
                if not(_la==9 or _la==10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 158
                self.unaryExpression()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGPParser.MultiplicativeExpressionContext)
            else:
                return self.getTypedRuleContext(grammarGPParser.MultiplicativeExpressionContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(grammarGPParser.PLUS)
            else:
                return self.getToken(grammarGPParser.PLUS, i)
